update with online version v2

--- a/website_current/nova_html/about.html
+++ b/website_current/nova_html/about.html
@@ -95,12 +95,12 @@
                 <p>En tant que directrice de Poly Games, <b>Chali-Anne Lauzon</b>, se doit de représenter la société technique lors des événements officiels. Elle se doit aussi de maintenir des relations cordiales avec le professeur qui endosse la société.</p>
             </div>
             <div class="col-lg-3 col-sm-4 fiche-description panel transparency">
-                <img src=http://polygames.polymtl.ca/Assets/images/logo.png alt="" class="img-responsive img-centered">
+                <img src=http://polygames.polymtl.ca/Assets/images/ja.png alt="" class="img-responsive img-centered">
                 <h4>Vice-président interne</h4>
                 <p>Le vice-président interne planifie les activités internes de la société et prend part aux activités des sociétés techniques pouvant servir les intérêts de la société.</p>
             </div>
             <div class="col-lg-3 col-sm-4 fiche-description panel transparency">
-                <img src=http://polygames.polymtl.ca/Assets/images/logo.png alt="" class="img-responsive img-centered">
+                <img src=http://polygames.polymtl.ca/Assets/images/ca.png alt="" class="img-responsive img-centered">
                 <h4>Vice-président externe</h4>
                 <p>En tant que vice-présidente externe, il maintient des relations cordiales avec les divers organismes associés et intervenants.</p>
             </div>
