--- a/website_current/nova_html/index.html
+++ b/website_current/nova_html/index.html
@@ -99,10 +99,44 @@
                     </div>
                   </div>
               </div>-->
-
+              <div class="panel panel-default transparency">
+                  <div class="panel-body transparency">
+                    <div class= "col-md-3">
+                        <img class="img-responsive img-centered" src=http://polygames.polymtl.ca/Assets/images/t-shirt.png alt="tshirt!">
+                    </div>
+                    <div class= "col-md-9">
+                      <h4 class="text-left">30 septembre 2015</h4>
+                      <br>
+                      <p>Achete un t-shirt Poly Games avant le 30 septembre pour 15$, il sera plus cher après! VITE! <a href="https://docs.google.com/forms/d/1lZsgN3hKsbePqblI6aeuDAc-2t_mTReeDt4C4_Sexws/viewform">Achète ici!!!</a></p>
+                    </div>
+                  </div>
+              </div>
               
+              <div class="panel panel-default transparency">
+                  <div class="panel-body transparency">
+                    <div class= "col-md-3">
+                        <img class="img-responsive img-centered" src=http://www.guidohenkel.com/images/UnityLogo.png alt="Unity!">
+                    </div>
+                    <div class= "col-md-9">
+                      <h4 class="text-left">Vendredi le 18 septembre 2015 à 19h00</h4>
+                      <br>
+                      <p>Formation Unity3D, réservez rapidement vos billets gratuitement <a href="https://www.eventbrite.ca/e/formation-unity-tickets-18482719311">ici</a> !</p>
+                    </div>
+                  </div>
+              </div>
 
-
+              <div class="panel panel-default transparency">
+                  <div class="panel-body transparency">
+                    <div class= "col-md-3">
+                        <img class="img-responsive img-centered" src=http://polygames.polymtl.ca/Assets/images/logo.png alt="poly-games!">
+                    </div>
+                    <div class= "col-md-9">
+                      <h4 class="text-left">Jeudi le 17 septembre 2015 à 12h30</h4>
+                      <br>
+                      <p>Rencontre d'ouverture et d'information au M-2401! </p>
+                    </div>
+                  </div>
+              </div>
 
               <div class="panel panel-default transparency">
                   <div class="panel-body transparency">
