--- a/website_current/nova_html/projets.html
+++ b/website_current/nova_html/projets.html
@@ -178,19 +178,19 @@
                 <div name ="Brainz" class="col-lg-4 single-project panel transparency">
                   <h2>Brainz</h2>
                   <p>Réalisé par : C au carré<br/>Description : Prenez le contrôle et envahissez un village avec une armée de zombies!</p>
-                  <p><a class="btn btn-default disabled" href="#" role="button">Voir le projet &raquo;</a></p>
+                  <p><a class="btn btn-default" href="https://bitbucket.org/landryf/brainz" role="button">Voir le projet &raquo;</a></p>
                 </div><!-- /.col-lg-4 -->
                 <div name="Hamster_Arena" class="col-lg-4 single-project panel transparency">
                   <h2>Hamster Arena</h2>
                   <p>Réalisé par : Hamster Arena<br/>Description : Un hamster doit manger et se défendre contre les insectes envahissant.</p>
-                  <p><a class="btn btn-default disabled" href="#" role="button">Voir le projet &raquo;</a></p>
+                  <p><a class="btn btn-default" href="https://github.com/PolytechniqueGames/A2014-HamsterArena" role="button">Voir le projet &raquo;</a></p>
                 </div><!-- /.col-lg-4 -->
             </div><!-- /.row -->
             <div class="row">
                 <div name="Brain_Game" class="col-lg-4 single-project panel transparency">
                     <h2>Brain_Game</h2>
                   <p>Réalisé par : Aight<br/>Description : Un jeu de recherche dans un labyrinthe-cerveau</p>
-                  <p><a class="btn btn-default disabled" href="#" role="button">Voir le projet &raquo;</a></p>
+                  <p><a class="btn btn-default" href="https://github.com/PolytechniqueGames/A2014-BrainGames" role="button">Voir le projet &raquo;</a></p>
                 </div><!-- /.col-lg-4 -->
                 <div name="Black_and_White_remix" class="col-lg-4 single-project panel transparency">
                   <h2>Black and White remix</h2>
