updated partenaires, added news pour rencontre mi-session

--- a/website_current/nova_html/index.html
+++ b/website_current/nova_html/index.html
@@ -102,6 +102,18 @@
               <div class="panel panel-default transparency">
                   <div class="panel-body transparency">
                     <div class= "col-md-3">
+                        <img class="img-responsive img-centered" src=http://polygames.polymtl.ca/Assets/images/rencontreMiSession.png alt="rencontre mi-session!">
+                    </div>
+                    <div class= "col-md-9">
+                      <h4 class="text-left">Jeudi le 22 octobre 2015 à 12h45</h4>
+                      <br>
+                      <p>Rencontre de mi-session au M-1410. Montrez-nous ce que vous avez fait!</p>
+                    </div>
+                  </div>
+              </div>
+              <div class="panel panel-default transparency">
+                  <div class="panel-body transparency">
+                    <div class= "col-md-3">
                         <img class="img-responsive img-centered" src=http://polygames.polymtl.ca/Assets/images/t-shirt.png alt="tshirt!">
                     </div>
                     <div class= "col-md-9">
