ajout event voter fin session

--- a/website_current/nova_html/index.html
+++ b/website_current/nova_html/index.html
@@ -102,6 +102,28 @@
               <div class="panel panel-default transparency">
                   <div class="panel-body transparency">
                     <div class= "col-md-3">
+                        <img class="img-responsive img-centered" src=http://polygames.polymtl.ca/Assets/images/rencontreFinSession.png alt="rencontre fin de session!">
+                    </div>
+                    <div class= "col-md-9">
+                      <h4 class="text-left">Donnez vos disponibilités pour la rencontre de fin de session!</h4>
+                      <br>
+                      <p>Afin de fixer la date, veuillez prendre 2 minutes pour donner vos disponibilités <a href="http://doodle.com/poll/8bm8svrcwan9iurg">sur ce Doodle</a><br>
+                          Il n'y aura de repas que si la session est à 12h ou à 17h.<br>
+                          Ce qui est demandé des équipes (1 seul choix) : <br>
+                          - Court vidéo (45 secondes à 1 minute) du jeu<br>
+                          - Présentation PowerPoint du jeu<br>
+                          - Présentation live du jeu<br>
+                          Ce qui suit la présentation des projets : <br>
+                          - Remise des chandails (15$ en argent comptant requis)<br>
+                          - Période de questions sur les activités à venir<br>
+                          - Lunch (à voir) et PR<br>
+                          Local : à déterminer</p>
+                    </div>
+                  </div>
+              </div>
+              <div class="panel panel-default transparency">
+                  <div class="panel-body transparency">
+                    <div class= "col-md-3">
                         <img class="img-responsive img-centered" src=http://polygames.polymtl.ca/Assets/images/rencontreMiSession.png alt="rencontre mi-session!">
                     </div>
                     <div class= "col-md-9">
