Mis à jour des photos de l'admin, ajout des événements tels que le creative, le document tutoriel unity etc.

--- a/website_current/nova_html/about.html
+++ b/website_current/nova_html/about.html
@@ -95,7 +95,7 @@
                 <p>En tant que directrice de Poly Games, <b>Chali-Anne Lauzon</b>, se doit de représenter la société technique lors des événements officiels. Elle se doit aussi de maintenir des relations cordiales avec le professeur qui endosse la société.</p>
             </div>
             <div class="col-lg-3 col-sm-4 fiche-description panel transparency">
-                <img src=http://polygames.polymtl.ca/Assets/images/ja.png alt="" class="img-responsive img-centered">
+                <img src=http://polygames.polymtl.ca/Assets/images/JaDaB.png alt="" class="img-responsive img-centered">
                 <h4>Vice-président interne</h4>
                 <p>Le vice-président interne planifie les activités internes de la société et prend part aux activités des sociétés techniques pouvant servir les intérêts de la société.</p>
             </div>
@@ -105,7 +105,7 @@
                 <p>En tant que vice-présidente externe, il maintient des relations cordiales avec les divers organismes associés et intervenants.</p>
             </div>
             <div class="col-lg-3 col-sm-4 fiche-description panel transparency">
-                <img src=http://polygames.polymtl.ca/Assets/images/logo.png alt="" class="img-responsive img-centered">
+                <img src=http://polygames.polymtl.ca/Assets/images/md.png alt="" class="img-responsive img-centered">
                 <h4>Trésorier</h4>
                 <p>Le trésorier tient les compte de Poly Games à jour et soumet les rapports financiers à l’AEP. Voit au contrôle des budgets alloués et remet les états financiers une fois par an.</p>
             </div>
@@ -117,12 +117,12 @@
                 <p>Le v.-p. commandites s’assure de la visibilité de Poly Games auprès des entreprises. Il rédige et révise régulièrement le dossier de commandites et s’assure de maintenir des relations cordiales avec les représentant des entreprises.</p>
             </div>
             <div class="col-lg-3 col-sm-4 fiche-description panel transparency">
-                <img src=http://polygames.polymtl.ca/Assets/images/logo.png alt="" class="img-responsive img-centered">
+                <img src=http://polygames.polymtl.ca/Assets/images/lisa.png alt="" class="img-responsive img-centered">
                 <h4>Vice-président marketing</h4>
-                <p>Le v.-p. marketing assure l’allure de Poly Games.</p>
+                <p>Le v.-p. <b>Lisa Bourgeois</b> marketing assure l’allure de Poly Games.</p>
             </div>
             <div class="col-lg-3 col-sm-4 fiche-description panel transparency">
-                <img src=http://polygames.polymtl.ca/Assets/images/logo.png alt="" class="img-responsive img-centered">
+                <img src=http://polygames.polymtl.ca/Assets/images/DavMac.png alt="" class="img-responsive img-centered">
                 <h4>Webmaster</h4>
                 <p>En tant que Webmasters,<b>David Binh Quang Tran</b> et <b>Mackly Férère-Antoine</b>, s'assurent du bon fonctionnement du site web et de sa mise à jour régulière.</p>
             </div>
@@ -149,6 +149,6 @@
 
 </body>
 <footer>
-  <p>Poly Games 2015, tous droits réservés.</p>
+  <p>Poly Games 2016, tous droits réservés.</p>
 </footer>
 </html>
