--- a/website_current/nova_html/documentation.html
+++ b/website_current/nova_html/documentation.html
@@ -81,6 +81,7 @@
         <div class="information-panel transparency">
             <h3>Tutoriels</h3>
             <ul>
+                <li><a href="http://polygames.polymtl.ca/Assets/documents/Programmation-avec-Unity.pdf">Tutoriel de programmation avec Unity3D</a></li>
                 <li><a href="http://polygames.polymtl.ca/Assets/documents/TutorielGit.pdf">Tutoriel Git v1.1</a></li>
                 <li><a href="http://polygames.polymtl.ca/Assets/documents/Unity_tutorial.pdf">Tutoriel Unity3D</a></li>
             </ul>
@@ -112,7 +113,7 @@
 </body>
 
 <footer>
-  <p>Poly Games 2015, tous droits réservés.</p>
+  <p>Poly Games 2016, tous droits réservés.</p>
 </footer>
 
 </html>
