--- a/website_current/nova_html/index.html
+++ b/website_current/nova_html/index.html
@@ -99,6 +99,62 @@
                     </div>
                   </div>
               </div>-->
+
+              <div class="panel panel-default transparency">
+                  <div class="panel-body transparency">
+                    <div class= "col-md-3">
+                        <img class="img-responsive img-centered" src=http://polygames.polymtl.ca/Assets/images/pix.png alt="creative_jam">
+                    </div>
+                    <div class= "col-md-9">
+                      <h4 class="text-left">Poly-Pixel</h4>
+                      <br>
+                      <p>Venez décorez les vitrines de la bibliothèque avec des post-it de couleur!!!
+                      </p>
+                    </div>
+                  </div>
+              </div>
+
+              <div class="panel panel-default transparency">
+                  <div class="panel-body transparency">
+                    <div class= "col-md-3">
+                        <img class="img-responsive img-centered" src=http://polygames.polymtl.ca/Assets/images/code.png alt="rencontre début-session!">
+                    </div>
+                    <div class= "col-md-9">
+                      <h4 class="text-left">Programmer avec Unity3D</h4>
+                      <br>
+                      <p><a href="http://polygames.polymtl.ca/Assets/documents/Programmation-avec-Unity.pdf">Apprenez à Coder avec Unity3D, avec le tutoriel rédigé par Daryl Barampanze!</a></p>
+                    </div>
+                  </div>
+              </div>
+
+              <div class="panel panel-default transparency">
+                  <div class="panel-body transparency">
+                    <div class= "col-md-3">
+                        <img class="img-responsive img-centered" src=http://polygames.polymtl.ca/Assets/images/creative_jam.png alt="creative_jam">
+                    </div>
+                    <div class= "col-md-9">
+                      <h4 class="text-left">Du Vendredi 22 janvier au samedi 24 janvier</h4>
+                      <br>
+                      <p>Venez nous rejoindre au NAD pour mettre à l'épreuve votre créativité sous un thème commun!!!
+                      </p>
+                    </div>
+                  </div>
+              </div>
+
+              <div class="panel panel-default transparency">
+                  <div class="panel-body transparency">
+                    <div class= "col-md-3">
+                        <img class="img-responsive img-centered" src=http://polygames.polymtl.ca/Assets/images/H2016P.png alt="rencontre début-session!">
+                    </div>
+                    <div class= "col-md-9">
+                      <h4 class="text-left">Jeudi le 14 janvier 2016 à 12h45</h4>
+                      <br>
+                      <p>Rencontre de début de session au <b>L-1720</b>. Venez assister à la 
+                        pésentation pour recevoir les informations concernant cette session!</p>
+                    </div>
+                  </div>
+              </div>
+
               <div class="panel panel-default transparency">
                   <div class="panel-body transparency">
                     <div class= "col-md-3">
@@ -431,7 +487,7 @@
                         <img src="Assets/img/FB-f-Logo__blue_29.png"></img>
                     </a>
                     <br/>-->
-                    <a href="https://docs.google.com/spreadsheets/d/18PBVi10zHL5abRUQZThs0g2Sg_c7Ydawa92zPONExm4/edit#gid=0">Formulaire d'inscription Automne 2015</a>
+                    <a href="https://docs.google.com/spreadsheets/d/18PBVi10zHL5abRUQZThs0g2Sg_c7Ydawa92zPONExm4/edit#gid=0">Formulaire d'inscription Automne 2016</a>
                 </div>
             </div>
             <div class="col-lg-4 panel panel-default transparency sidebarpanel">
@@ -477,7 +533,7 @@
 </body>
 
 <footer>
-  <p>Poly Games 2015, tous droits réservés.</p>
+  <p>Poly Games 2016, tous droits réservés.</p>
 </footer>
 
 </html>
