--- a/website_current/nova_html/partenaires.html
+++ b/website_current/nova_html/partenaires.html
@@ -126,5 +126,7 @@
     <script src="Assets/js/bootstrap.min.js"></script>
 
 </body>
-
+    <footer>
+      <p>Poly Games 2016, tous droits réservés.</p>
+    </footer>
 </html>
