Formation Unreal, Unity et Git-Unity + photo du directeur et autres

--- a/website_current/nova_html/about.html
+++ b/website_current/nova_html/about.html
@@ -90,9 +90,9 @@
         <h2>Membres éxécutifs</h2>
         <div class="row">
             <div class="col-lg-3 col-sm-4 fiche-description panel transparency">
-                <img src=http://polygames.polymtl.ca/Assets/images/ca.png alt="Chali-Anne Lauzon" class="img-responsive img-centered">
-                <h4>Directrice</h4>
-                <p>En tant que directrice de Poly Games, <b>Chali-Anne Lauzon</b>, se doit de représenter la société technique lors des événements officiels. Elle se doit aussi de maintenir des relations cordiales avec le professeur qui endosse la société.</p>
+                <img src=http://polygames.polymtl.ca/Assets/images/fery.png alt="Felix Landry" class="img-responsive img-centered">
+                <h4>Directeur</h4>
+                <p>En tant que directeur de Poly Games, <b>Félix Landry</b>, se doit de représenter la société technique lors des événements officiels. Il se doit aussi de maintenir des relations cordiales avec le professeur qui endosse la société.</p>
             </div>
             <div class="col-lg-3 col-sm-4 fiche-description panel transparency">
                 <img src=http://polygames.polymtl.ca/Assets/images/JaDaB.png alt="" class="img-responsive img-centered">
