--- a/website_current/nova_html/index.html
+++ b/website_current/nova_html/index.html
@@ -103,12 +103,26 @@
               <div class="panel panel-default transparency">
                   <div class="panel-body transparency">
                     <div class= "col-md-3">
+                        <img class="img-responsive img-centered" src=http://polygames.polymtl.ca/Assets/images/Unreal.png alt="Unreal">
+                    </div>
+                    <div class= "col-md-9">
+                      <h4 class="text-left">Formation Unreal</h4>
+                      <br>
+                      <p>Venez assister à notre formation Unreal le 7 mars 2016!!!
+                      </p>
+                    </div>
+                  </div>
+              </div>
+
+              <div class="panel panel-default transparency">
+                  <div class="panel-body transparency">
+                    <div class= "col-md-3">
                         <img class="img-responsive img-centered" src=http://polygames.polymtl.ca/Assets/images/pix.png alt="creative_jam">
                     </div>
                     <div class= "col-md-9">
                       <h4 class="text-left">Poly-Pixel</h4>
                       <br>
-                      <p>Venez décorez les vitrines de la bibliothèque avec des post-it de couleur!!!
+                      <p>Venez décorer les vitrines de la bibliothèque avec des post-it de couleur!!!
                       </p>
                     </div>
                   </div>
@@ -122,7 +136,37 @@
                     <div class= "col-md-9">
                       <h4 class="text-left">Programmer avec Unity3D</h4>
                       <br>
-                      <p><a href="http://polygames.polymtl.ca/Assets/documents/Programmation-avec-Unity.pdf">Apprenez à Coder avec Unity3D, avec le tutoriel rédigé par Daryl Barampanze!</a></p>
+                      <p><a href="http://polygames.polymtl.ca/Assets/documents/Programmation-avec-Unity.pdf">Apprener à Coder avec Unity3D, avec le tutoriel rédigé par Daryl Barampanze!</a></p>
+                    </div>
+                  </div>
+              </div>
+              
+              <div class="panel panel-default transparency">
+                  <div class="panel-body transparency">
+                    <div class= "col-md-3">
+                        <img class="img-responsive img-centered" src=http://polygames.polymtl.ca/Assets/images/unity_logo.png alt="Git Formation">
+                    </div>
+                    <div class= "col-md-9">
+                      <h4 class="text-left">Formation Unity 16 février 2016</h4>
+                      <br>
+                      <p> <b>Venez assister à notre formation Unity!!!</b>
+                      </p>
+                    </div>
+                  </div>
+              </div>
+
+              <div class="panel panel-default transparency">
+                  <div class="panel-body transparency">
+                    <div class= "col-md-3">
+                        <img class="img-responsive img-centered" src=http://polygames.polymtl.ca/Assets/images/unity-git.png alt="Git Formation">
+                    </div>
+                    <div class= "col-md-9">
+                      <h4 class="text-left">Formation Git jeudi 11 février 2016</h4>
+                      <br>
+                      <p> Tu veux travailler avec unity mais aucun gestionnaire de configuration ne fait l'affaire?
+                          Tu as essayer git mais tu as plein de problèmes avec tes fichiers de généraion temporaires et tes meta-data? <br>
+                          <b>Viens assister à la formation git donnée par Benjamin-Brodeur Matthieu!!!</b>
+                      </p>
                     </div>
                   </div>
               </div>
