ajout des projets de creative jams pour A2015 et H2016

--- a/website_current/nova_html/projets.html
+++ b/website_current/nova_html/projets.html
@@ -79,9 +79,8 @@
     </nav>
 
     <!-- Carousel
-    ================================================== -->
+    ==================================================
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
-      <!-- Indicators -->
       <ol class="carousel-indicators">
         <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
         <li data-target="#myCarousel" data-slide-to="1"></li>
@@ -122,9 +121,10 @@
 
     <!-- All projects -->
     <div class="container">
-
+        
         <!-- Quick access list -->
         <div class="col-lg-12 project-list panel transparency">
+          <h1>Projets</h1>
             <div class="col-lg-3">
                 <div class="panel-heading">Hiver 2015</div>
                   <!-- List group -->
@@ -165,13 +165,37 @@
                   <a href="#BREAKOUT" class="list-group-item">BREAKOUT</a>
               </div>
             </div>
+
+            <hr/>
+
+            <div class="col-lg-3">
+              <div class="panel-heading">Creative Jam Hiver 2016</div>
+              <!-- List group -->
+              <div class="list-group">
+                  <a href="#CJ_Cheezy" class="list-group-item">Cheezy</a>
+                  <a href="#CJ_Glo" class="list-group-item">Glo</a>
+                  <a href="#CJ_ClearCut" class="list-group-item">Clear Cut</a>
+              </div>
+            </div>
+
+            <div class="col-lg-3">
+              <div class="panel-heading">Creative Jam Autonme 2015</div>
+              <!-- List group -->
+              <div class="list-group">
+                  <a href="#CJ_MattressRun" class="list-group-item">Mattress Run</a>
+                  <a href="#CJ_PillowTalk" class="list-group-item">Pillow Talk</a>
+                  <a href="#CJ_SpookyCookies" class="list-group-item">Spooky Cookies</a>
+              </div>
+            </div>
         </div>
+
         <!-- ./Quick access list -->
         <!-- Project details -->
         <div class="col-lg-12 all-projects">
+          <hr/>
             <div class="row">
                 <div name ="DeadField" class="col-lg-4 single-project panel transparency">
-                  <h2>Brainz</h2>
+                  <h2>Dead Field</h2>
                   <p>Réalisé par : Fantastic Four<br/>Description : Battez-vous sur dans un arène dynamique, soyez le dernier en vie!</p>
                   <p><a class="btn btn-default" href="https://github.com/Poly-Games-TheFantasticFour/Game" role="button">Voir le projet &raquo;</a></p>
                 </div><!-- /.col-lg-4 -->
@@ -261,6 +285,43 @@
                   <p><a class="btn btn-default disabled" href="#" role="button">Voir le projet &raquo;</a></p>
                 </div><!-- /.col-lg-4 -->
                 
+            </div><!-- /.row -->
+
+            <hr/>
+            <div class="row">
+                <div name="CJ_Cheezy" class="col-lg-4 single-project panel transparency">
+                  <h2>Cheezy</h2>
+                  <p></p>
+                  <p><a class="btn btn-default" href="https://drive.google.com/file/d/0B0OMz4aP7NqRcVQwMnFqejlCQVE/view" role="button">Voir le projet &raquo;</a></p>
+                </div><!-- /.col-lg-4 -->
+                <div name="CJ_Glo" class="col-lg-4 single-project panel transparency">
+                  <h2>Glo</h2>
+                  <p></p>
+                  <p><a class="btn btn-default" href="https://drive.google.com/file/d/0B0OMz4aP7NqRczNZd2l6T3VUWDQ/view?usp=sharing" role="button">Voir le projet &raquo;</a></p>
+                </div><!-- /.col-lg-4 -->
+                <div name="CJ_ClearCut" class="col-lg-4 single-project panel transparency">
+                  <h2>Clear Cut</h2>
+                  <p></p>
+                  <p><a class="btn btn-default" href="https://drive.google.com/file/d/0B0OMz4aP7NqRa2VoVElRSnRfOVk/view?usp=sharing" role="button">Voir le projet &raquo;</a></p>
+                </div><!-- /.col-lg-4 -->             
+            </div><!-- /.row -->
+
+            <div class="row">
+                <div name="CJ_MattressRun" class="col-lg-4 single-project panel transparency">
+                  <h2>Mattress Run</h2>
+                  <p></p>
+                  <p><a class="btn btn-default" href="https://drive.google.com/file/d/0ByYFsOUtNCmSM3JoejJQSDBXWUE/view?usp=sharing" role="button">Voir le projet &raquo;</a></p>
+                </div><!-- /.col-lg-4 -->
+                <div name="CJ_PillowTalk" class="col-lg-4 single-project panel transparency">
+                  <h2>Pillow Talk</h2>
+                  <p></p>
+                  <p><a class="btn btn-default" href="https://drive.google.com/file/d/0B2Yke9Y9fZJlTDhPMi01dEpXbnc/view?usp=sharing" role="button">Voir le projet &raquo;</a></p>
+                </div><!-- /.col-lg-4 -->
+                <div name="CJ_SPookyCookies" class="col-lg-4 single-project panel transparency">
+                  <h2>Spooky Cookies</h2>
+                  <p></p>
+                  <p><a class="btn btn-default" href="https://drive.google.com/file/d/0ByYFsOUtNCmSSnZnTWFnZkVkOWc/view?usp=sharing" role="button">Voir le projet &raquo;</a></p>
+                </div><!-- /.col-lg-4 -->         
             </div><!-- /.row -->
         </div>
         <!-- ./Project details -->
